<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Top_Places">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="167dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:text="Top Places :"
        android:textColor="#090808"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="194dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/godavarinadi" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="157dp"
        android:layout_height="114dp"
        android:layout_marginTop="104dp"
        android:text="@string/link4"
        android:textColor="#020101"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="176dp"
        android:layout_height="151dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/shahsrakund_waterfall" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="165dp"
        android:layout_height="92dp"
        android:layout_marginTop="88dp"
        android:text="@string/link5"
        android:textColor="#070606"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="182dp"
        android:layout_height="140dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.314"
        app:srcCompat="@drawable/visawa_garden" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="172dp"
        android:layout_height="117dp"
        android:layout_marginBottom="132dp"
        android:text="@string/link6"
        android:textColor="#0B0808"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toEndOf="@+id/imageView6" />
</androidx.constraintlayout.widget.ConstraintLayout>