<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pumps">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="189dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:text="PETROL PUMPS:"
        android:textColor="#0C0A0A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="193dp"
        android:layout_height="155dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        app:srcCompat="@drawable/baba" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="155dp"
        android:layout_height="115dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="116dp"
        android:text="@string/link1"
        android:textColor="#0E0B0B"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="178dp"
        android:layout_height="184dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:srcCompat="@drawable/lala1" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="138dp"
        android:layout_height="134dp"
        android:layout_marginTop="84dp"
        android:text="@string/link2"
        android:textColor="#090808"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="176dp"
        android:layout_height="148dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gunde" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="158dp"
        android:layout_height="109dp"
        android:layout_marginBottom="104dp"
        android:text="@string/link3"
        android:textColor="#100E0E"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toBottomOf="@+id/textView25"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>