<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Restaurant">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="264dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:text="Restaurants:"
        android:textColor="#0B0909"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="165dp"
        android:layout_height="95dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="16dp"
        android:text="@string/link10"
        android:textColor="#090808"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="206dp"
        android:layout_height="167dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/sunny" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="203dp"
        android:layout_height="194dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/angad" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="159dp"
        android:layout_height="131dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="77dp"
        android:text="@string/link11"
        android:textColor="#040303"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="193dp"
        android:layout_height="168dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/tulsi" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="148dp"
        android:layout_height="130dp"
        android:layout_marginTop="100dp"
        android:text="@string/link12"
        android:textColor="#070707"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>