<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reli">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="117dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gurudwara" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="156dp"
        android:layout_height="113dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="100dp"
        android:text="@string/link13"
        android:textColor="#121111"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="269dp"
        android:layout_height="50dp"
        android:text="Religious  Places  :"
        android:textColor="#090909"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="179dp"
        android:layout_height="130dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kaleshawr" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="186dp"
        android:layout_height="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="76dp"
        android:text="@string/link14"
        android:textColor="#0C0C0C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="174dp"
        android:layout_height="161dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rataneshwari" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="165dp"
        android:layout_height="149dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="72dp"
        android:text="@string/link15"
        android:textColor="#0C0C0C"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>